--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,8 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.datastore:datastore-core:1.0.0'
     implementation "androidx.datastore:datastore-preferences:1.0.0"
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.1'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.5.1'
     def nav_version = "2.5.0"
 
     implementation 'androidx.core:core-ktx:1.8.0'
