--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     implementation "androidx.datastore:datastore-preferences:1.0.0"
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.1'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.1'
+    implementation 'com.google.firebase:firebase-auth-ktx:21.0.7'
     def nav_version = "2.5.0"
 
     implementation 'androidx.core:core-ktx:1.8.0'
