--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,10 @@ android {
 }
 
 dependencies {
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.4'
+
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.datastore:datastore-core:1.0.0'
